fix: nav overflow on wide but short screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@
     }
 
     header {
-        @apply flex flex-wrap items-center border-b border-primary gap-x-2 justify-between px-6 max-lg:sticky max-lg:top-0 max-lg:bg-inherit max-lg:z-50 mx-auto md:px-12 lg:py-24 lg:sticky lg:top-0 lg:max-h-screen lg:flex-col lg:items-start lg:pl-24 lg:pr-0 lg:w-1/3 lg:border-none
+        @apply flex flex-wrap items-center border-b border-primary gap-x-2 justify-between px-6 max-lg:sticky max-lg:top-0 max-lg:bg-inherit max-lg:z-50 mx-auto md:px-12 lg:py-24 lg:sticky lg:top-0 lg:max-h-screen lg:flex-col lg:items-start lg:pl-24 lg:pr-0 lg:w-1/3 lg:border-none lg:flex-nowrap
     }
 
     h1 {
